Nuevo diseño y logo
Modificacion de diseño y se agrega logo a partir de imagen png.

--- a/index.html
+++ b/index.html
@@ -9,12 +9,40 @@
     <meta name="description" content="BOW SAAVEDRA" />
 </head>
 
-<body>
-	<!--SECCION INICIO-->
+<body class="body">
+	<div class="bw_lineas_container">
+		<div class="bw_linea"></div>
+		<div class="bw_linea"></div>
+		<div class="bw_linea"></div>
+	</div>
+	<div class="header header_seccion">
+		<a href="#" class="nav_logo w_inline-block w_current">
+			<img src="Images/LogoB.png" alt="logo" height="30" class="logo">
+		</a>
+	</div>
+	<div class="nav_box">
+		<div class="menu_box"></div>
+	</div>
+	<div id="pag-container" class="pag_container">
+		<div class="about_hero_seccion">
+			<div class="hero_container proyecto_hero_container">
+				<div class="container_img-container">
+					<img src="Images/Image21.png" alt="Perspectiva_BowSaavedra" object-fit-size="cover" class="image_carrusel">
+				</div>
+			</div>
+		    <div class="black_box_container">
+				<div class="black_box_intro">
+					<h1 class="name_projet">BOW SAAVEDRA</h1>
+					<h2 class="slogan">Una experiencia única para los que se animan a vivir distinto.</h2>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!--SECCION INICIO
 	<section id="inicio">
 		<div class="banner">
-		 <nav class="navbar"><!--
-		 	<img src="" alt="logo" class="logo">-->
+		 <nav class="navbar">
+		 	<img src="" alt="logo" class="logo">
 		     <ul>
 				 <li><a href="#inicio">Inicio</a></li>
 				 <li><a href="#proyecto">Proyecto</a></li>
@@ -49,7 +77,7 @@
 	 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>	
 	 </div>
 	</section>
-	<!--SECCION PROYECTO-->
+	SECCION PROYECTO
 	<section id="proyecto" class="proyecto">
 		<div class="contenido-seccion">
 			<div class="implantacion"></div>
@@ -74,7 +102,7 @@
 			  </div>
 		</div>
 		
-	</section><!--
+	</section>
 SECCION UNIDADES
 	<section id="unidades">
 		
