Agregué nuevo div
Agrego info de proyecto

--- a/index.html
+++ b/index.html
@@ -37,6 +37,21 @@
 				</div>
 			</div>
 		</div>
+		<div class="proyecto_info_container">
+			<div class="proyecto_info_columna">
+				<div class="info_parrafo texto">
+					<h6>Programa</h6>
+					<p>El proyecto cuenta con unidades de 1, 2, 3 y 4 ambientes que le dan ese toque que tu vida necesita</p>
+					<h6>Ubicación</h6>
+					<p>Vilela 3289, Saavedra</p>
+					<p class="caba">CABA, Argentina</p>
+					<h6>Superficie</h6>
+					<p>3.090 m²</p>
+					<h6>Amenities</h6>
+					<p>Piscina, Solárium, Gimnasio, SUM, terraza con parrillas y Bicicleteros</p>
+				</div>
+			</div>
+		</div>
 	</div>
 	<!--SECCION INICIO
 	<section id="inicio">
