Agrego texto y estilo
Se suma información de proyecto y estilos.

--- a/index.html
+++ b/index.html
@@ -41,14 +41,27 @@
 			<div class="proyecto_info_columna">
 				<div class="info_parrafo texto">
 					<h6>Programa</h6>
-					<p>El proyecto cuenta con unidades de 1, 2, 3 y 4 ambientes que le dan ese toque que tu vida necesita</p>
+					<p>El proyecto cuenta con unidades de 1, 2, 3 y 4 ambientes que le dan ese toque que tu vida necesita</p><br>
 					<h6>Ubicación</h6>
 					<p>Vilela 3289, Saavedra</p>
-					<p class="caba">CABA, Argentina</p>
+					<p class="caba">CABA, Argentina</p><br>
 					<h6>Superficie</h6>
-					<p>3.090 m²</p>
+					<p>3.090 m²</p><br>
 					<h6>Amenities</h6>
 					<p>Piscina, Solárium, Gimnasio, SUM, terraza con parrillas y Bicicleteros</p>
+				</div>
+			</div>
+			<div class="proyecto_info_columna">
+				<div class="info_parrafo texto">
+					<p><strong>BOW SAAVEDRA</strong> es un proyecto ubicado en el corazón del barrio de Saavedra,  frente al emblemático parque y rodeado de vegetación. Se comenzó con la idea central de generar unidades con espacios al aire libre y un fuerte vínculo con la naturaleza. Creemos en la importancia, la necesidad y el valor de generar espacios de expansión descubiertos en las viviendas de una ciudad de gran escala, mejorando así, la calidad de vida de sus habitantes.</p><br>
+
+ 
+
+                    <p>Con esa idea diseñamos un proyecto de forma escalonada que se retira a medida que se desarrolla en forma vertical.  Esta tipología nos permitió crear espacios exteriores, incrementando de esa forma el ingreso de la luz y el entorno. La vegetación, verdadera protagonista del proyecto, no solo se contempla, sino que también se vive en su interior. Para nosotros es mucho más que un edificio, representa una forma de vivir y de hacer ciudad.</p><br>
+
+​
+
+                    <p>Planteamos diferentes tipologías a cubrir las distintas necesidades de los usuarios. Departamentos de cuatro, tres, dos ambientes y monoambientes, con terrazas o balcones aterrazados. Unidades con espacios tanto cubiertos como descubiertos, donde nuestro principal objetivo se centra en vivir no solo el interior, sino tambien el exterior.</p>
 				</div>
 			</div>
 		</div>
