Agrega planta ss y estilo
Se añade planta subsuelo y estilos.

--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@
 				</div>
 			</div>
 		</div>
+		<div class="plantas_container">
+			<div class="plantas_cen">
+			    <div class="planta_container_columna">
+			    	<div class="imagen_container">
+			    	    <img src="Images/PLANO_SUBSUELO.jpg" alt="Planta Subsuelo" class="img_ss">
+			    	</div>
+			   </div>
+			</div>
+		</div>
 	</div>
 	<!--SECCION INICIO
 	<section id="inicio">
