--- a/index.html
+++ b/index.html
@@ -68,15 +68,72 @@
 				</div>
 			</div>
 		</div>
+		<div class="heading">
+			<div class="container_heading">
+				<h2>PLANTAS ARQUITECTÓNICAS</h2>
+			</div>
+		</div>
 		<div class="plantas_container">
 			<div class="plantas_cen">
 			    <div class="planta_container_columna">
 			    	<div class="imagen_container">
-			    	    <img src="Images/PLANO_SUBSUELO.jpg" alt="Planta Subsuelo" class="img_ss">
+			    	    <img src="Images/PLANO_SUBSUELO.jpg" alt="Planta Subsuelo" class="img_ps">
 			    	</div>
+			    	<p class="img_epigrafe">Planta Subsuelo</p>
+			   </div>
+			   <div class="planta_container_columna">
+			    	<div class="imagen_container">
+			    	    <img src="Images/PLANO PLANTA BAJA.jpg" alt="Planta Baja" class="img_ps">
+			    	</div>
+			    	<p class="img_epigrafe">Planta Baja</p>
+			   </div>
+			    <div class="planta_container_columna">
+			    	<div class="imagen_container">
+			    	    <img src="Images/PLANO PISO 1.jpg" alt="Planta Primer Piso" class="img_ps">
+			    	</div>
+			    	<p class="img_epigrafe">Planta Primer Piso</p>
+			   </div>
+			    <div class="planta_container_columna">
+			    	<div class="imagen_container">
+			    	    <img src="Images/PLANO PISO 2.jpg" alt="Planta Segundo Piso" class="img_ps">
+			    	</div>
+			    	<p class="img_epigrafe">Planta Segundo Piso</p>
+			   </div>
+			      <div class="planta_container_columna">
+			    	<div class="imagen_container">
+			    	    <img src="Images/PLANO PISO 3.jpg" alt="Planta Tercer Piso" class="img_ps">
+			    	</div>
+			    	<p class="img_epigrafe">Planta Tercer Piso</p>
+			   </div>
+			      <div class="planta_container_columna">
+			    	<div class="imagen_container">
+			    	    <img src="Images/PLANO PISO 4.jpg" alt="Planta Cuarto Piso" class="img_ps">
+			    	</div>
+			    	<p class="img_epigrafe">Planta Cuarto Piso</p>
+			   </div>
+			     <div class="planta_container_columna">
+			    	<div class="imagen_container">
+			    	    <img src="Images/PLANO AZOTEA.jpg" alt="Planta Azotea" class="img_ps">
+			    	</div>
+			    	<p class="img_epigrafe">Planta Azotea</p>
 			   </div>
 			</div>
 		</div>
+		<div class="heading">
+			<div class="container_heading">
+				<h2>VISTAS</h2>
+			</div>
+		</div>
+		<div class="heading">
+			<div class="container_heading">
+				<h3>FRENTE a calle VILELA</h3>
+			</div>
+		</div>
+			<div class="hero_container proyecto_hero_container">
+				<div class="container_img-container">
+					<img src="Images/Render Vilela.png" alt="Vista a calle Vilela - BowSaavedra" object-fit-size="cover" class="image_carrusel">
+				</div>
+			</div>
 	</div>
 	<!--SECCION INICIO
 	<section id="inicio">
