--- a/index.html
+++ b/index.html
@@ -134,6 +134,30 @@
 					<img src="Images/Render Vilela.png" alt="Vista a calle Vilela - BowSaavedra" object-fit-size="cover" class="image_carrusel">
 				</div>
 			</div>
+		<div class="vistas_container">
+			<div class="vista_cen">
+			   <div class="imagen_container">
+			    	<img src="Images/VISTA VILELA.jpg" alt="Frente a calle Vilela" class="img_ps">
+               </div>
+            </div>	
+        </div> 
+        <div class="heading">
+			<div class="container_heading">
+				<h3>FRENTE a calle RAMÓN FREIRE</h3>
+			</div>
+		</div>
+			<div class="hero_container proyecto_hero_container">
+				<div class="container_img-container">
+					<img src="Images/Render Ramon Freire.png" alt="Vista a calle Ramón Freire - BowSaavedra" object-fit-size="cover" class="image_carrusel">
+				</div>
+			</div>
+		<div class="vistas_container">
+			<div class="vista_cen">
+			   <div class="imagen_container">
+			    	<img src="Images/VISTA RAMON FREIRE.jpg" alt="Frente a calle Ramón Freire" class="img_ps">
+               </div>
+            </div>
+        </div>	    	   				   
 	</div>
 	<!--SECCION INICIO
 	<section id="inicio">
