--- a/index.html
+++ b/index.html
@@ -164,7 +164,41 @@
                </div>
             </div>
         </div>
+          <div class="heading">
+			<div class="container_heading">
+				<h3>otras VISTAS...</h3>
+			</div>
+		</div>
+ 
+	</div>
+	<div id="carouselExampleIndicators" class="carousel slide">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="Images/Render acceso cafe.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="Images/Render acceso Coworking.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="Images/Render frente Gym.png" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
     </section>
+
     <!--SECCION AMENITIES-->
     <section id="amenities">
     	
@@ -177,8 +211,6 @@
     <section id="contacto">
     	
     </section>
-
-	</div>
 
 	<!--
 		 <div class="redes">
