Se añade sección
Se agregan iconos y texto. También estilos.

--- a/index.html
+++ b/index.html
@@ -201,7 +201,33 @@
 
     <!--SECCION AMENITIES-->
     <section id="amenities">
-    	
+    	<div class="heading_amenities">
+			<div class="container_heading_amenities">
+				<h2>AMENITIES</h2>
+			</div>
+			<div class="amenities_container">
+				<div class="amenitie_container">
+					<i class="fas fa-swimming-pool"></i>
+		            <figcaption>PISCINA</figcaption>
+		        </div>
+		        <div class="amenitie_container">
+				    <i class="fas fa-sun"></i>
+				    <figcaption>SOLÁRIUM</figcaption>
+			    </div>
+			    <div class="amenitie_container">
+				    <i class="fa-solid fa-dumbbell"></i>
+				    <figcaption>GIMNASIO</figcaption>
+			    </div>
+			    <div class="amenitie_container">
+                    <i class="fas fa-briefcase"></i>
+                    <figcaption>COWORKING</figcaption>
+                </div>
+                <div class="amenitie_container">
+                    <i class="fa-solid fa-grill"></i>
+                    <figcaption>SUM/PARRILLAS</figcaption>
+                </div>
+			</div>
+		</div>
     </section>
     <!--SECCION UNIDADES-->
     <section id="unidades">
