--- a/index.html
+++ b/index.html
@@ -233,9 +233,14 @@
     <section id="unidades">
     	
     </section>
-    <!--SECCION CONTACTO-->
-    <section id="contacto">
-    	
+    <!--SECCION UBICACIÓN-->
+    <section id="ubicacion">
+    	   <div class="heading_ubicacion">
+			    <div class="container_heading_ubicacion">
+				    <h2>UBICACIÓN</h2>
+			    </div>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3907.9032784195133!2d-58.4825760286465!3d-34.549963480392535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb6969183f759%3A0xfd2ec788d3e7bd81!2sVilela%203289%2C%20C1429DCA%20CABA!5e0!3m2!1ses-419!2sar!4v1701629292148!5m2!1ses-419!2sar" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+			</div>
     </section>
 
 	<!--
