--- a/index.html
+++ b/index.html
@@ -11,21 +11,32 @@
 </head>
 
 <body class="body">
+
 	<!--SECCION INICIO-->
-	<section id="inicio">
+	<section id="home">
 	<div class="bw_lineas_container">
 		<div class="bw_linea"></div>
 		<div class="bw_linea"></div>
 		<div class="bw_linea"></div>
 	</div>
-	<div class="header header_seccion">
-		<a href="#" class="nav_logo w_inline-block w_current">
-			<img src="Images/LogoB.png" alt="logo" height="30" class="logo">
-		</a>
-	</div>
-	<div class="nav_box">
-		<div class="menu_box"></div>
-	</div>
+	<header class="header_container">
+	     <div class="header_seccion">
+		      <a href="#" class="nav_logo w_inline-block w_current">
+			      <img src="Images/LogoB.png" alt="logo" height="30" class="logo">
+		      </a>
+	     </div>
+	
+	     <nav class="header_seccion">
+		      <div class="menu_box">
+			      <ul class="menu_container">
+				      <li><a href="#home">Home</a></li>
+				      <li><a href="#info_tecnica">Info Técnica</a></li>
+				      <li><a href="#amenities">Amenities</a></li>
+				      <li><a href="#ubicacion">Ubicación</a></li>
+			     </ul>
+		       </div>
+	      </nav>
+    </header>
 	<div id="pag-container" class="pag_container">
 		<div class="about_hero_seccion">
 			<div class="hero_container proyecto_hero_container">
@@ -72,6 +83,7 @@
 			</div>
 		</div>
 	</section>
+
 	<!--SECCION INFO TÉCNICA-->
 	<section id="info_tecnica">
 		<div class="heading">
@@ -229,10 +241,7 @@
 			</div>
 		</div>
     </section>
-    <!--SECCION UNIDADES-->
-    <section id="unidades">
-    	
-    </section>
+
     <!--SECCION UBICACIÓN-->
     <section id="ubicacion">
     	   <div class="heading_ubicacion">
