--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           </div>
           <div class="carousel-inner">
              <div class="carousel-item active">
-                 <img src="Images/Render acceso cafe.png" class="d-block w-100" alt="...">
+                 <img src="Images/Render Acceso Cafe.png" class="d-block w-100" alt="...">
              </div>
              <div class="carousel-item">
                  <img src="Images/Render acceso Coworking.png" class="d-block w-100" alt="...">
