--- a/+proyectos.html
+++ b/+proyectos.html
@@ -31,28 +31,45 @@
 				  </ul>
 			  </div>
 	     </nav>
-	     <div id="carousel+proyectos" class="carousel slide" data_ride="carousel">
-	     	<ol class="carousel-indicators">
-	     		<li data-target="#carousel+proyectos" data-slide-to="0" class="active"></li>
-	     		<li data-target="#carousel+proyectos" data-slide-to="1" ></li>
-	     	</ol>
-	     	<div class="carousel-inner">
-	     		<div class="carousel-item active">
-	     			<img src="Images/Image21.png" alt=".." class="d-block w-100">
-	     		</div>
-	     		<div class="carousel-item">
-	     			<img src="Images/desde_SUM.png" alt=".." class="d-block w-100">
-	     		</div>
-	     	</div>
-	     	<a href="#carousel+proyectos" class="carousel-control-prev" role="button" data-slide="prev">
-	     		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-	     		<span class="visually-hidden">Anterior</span>
-	     	</a>
-	     	<a href="#carousel+proyectos" class="carousel-control-next" role="button" data-slide="next">
-	     		<span class="carousel-control-next-icon" aria-hidden="true"></span>
-	     		<span class="visually-hidden">Siguiente</span>
-	     	</a>
-	     </div>
+	 </header>
+<div id="carouselExampleCaptions" class="carousel slide">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="Images/Render Vilela" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>First slide label</h5>
+        <p>Some representative placeholder content for the first slide.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src=".Images/Render Ramon Freire" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Second slide label</h5>
+        <p>Some representative placeholder content for the second slide.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="..." class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Third slide label</h5>
+        <p>Some representative placeholder content for the third slide.</p>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
 
  <footer>
 		<div class="yo">&copy PatoMuller - ARGENTINA 2023</div>
