--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		    <div class="about_hero_seccion">
 			    <div class="hero_container proyecto_hero_container">
 				    <div class="container_img-container">
-					    <img src="Images/Image21.png" alt="Perspectiva_BowSaavedra" class="image_carrusel">
+					    <img src="Images/Image21.png" alt="Perspectiva_BowSaavedra" class="img-fluid image_carrusel">
 				   </div>
 			  </div>
 		      <div class="black_box_container">
@@ -82,7 +82,7 @@
 			   <div class="images_galeria_container">
 				    <div class="img_container">
 					    <div class="imagen">
-						    <img src="Images/desde_SUM.png" alt="Espacio urbano en BOW SAAVEDRA">
+						    <img class="img-fluid" src="Images/desde_SUM.png" alt="Espacio urbano en BOW SAAVEDRA">
 					    </div>
 				    </div>
 			   </div>
@@ -154,7 +154,7 @@
 		</div>
 			<div class="hero_container proyecto_hero_container">
 				<div class="container_img-container">
-					<img src="Images/Render Vilela.png" alt="Vista a calle Vilela - BowSaavedra" object-fit-size="cover" class="image_carrusel">
+					<img src="Images/Render Vilela.png" alt="Vista a calle Vilela - BowSaavedra" object-fit-size="cover" class="img-fluid image_carrusel">
 				</div>
 			</div>
 		<div class="vistas_container">
@@ -171,7 +171,7 @@
 		</div>
 			<div class="hero_container proyecto_hero_container">
 				<div class="container_img-container">
-					<img src="Images/Render Ramon Freire.png" alt="Vista a calle Ramón Freire - BowSaavedra" object-fit-size="cover" class="image_carrusel">
+					<img src="Images/Render Ramon Freire.png" alt="Vista a calle Ramón Freire - BowSaavedra" object-fit-size="cover" class="img-fluid image_carrusel">
 				</div>
 			</div>
 		<div class="vistas_container">
